// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AATableRow /> render table row with sub columns and combined columns 1`] = `
<tr
  style={
    Object {
      "height": "18px",
    }
  }
>
  <td
    className=""
  >
    #1
  </td>
  <td
    className=""
  >
    #2
  </td>
  <td
    className="combined-column"
  >
    #3
  </td>
  <td
    className=""
  >
    #4
  </td>
  <td
    className=""
  >
    #5
  </td>
  <td
    className="combined-column"
  >
    #6
  </td>
</tr>
`;

exports[`<BaseTable /> renders base table 1`] = `
<Table__TableScroll
  className="TableScroll"
  innerRef={[Function]}
>
  <Table__StyledTable
    cellAlignment={
      Array [
        "left",
        "left",
        "left",
        "left",
        "left",
        "left",
      ]
    }
    innerRef={[Function]}
  >
    <TableHeader
      columns={
        Array [
          Object {
            "align": Array [
              "left",
            ],
            "headerAlign": "left",
            "isSortable": false,
            "key": "a",
            "keys": Array [
              "a",
            ],
            "label": "First",
            "size": Array [
              "medium",
            ],
            "subColumns": Array [],
            "tooltip": undefined,
          },
          Object {
            "align": Array [
              "left",
              "left",
            ],
            "headerAlign": "left",
            "isSortable": false,
            "key": "b|c",
            "keys": Array [
              "b",
              "c",
            ],
            "label": "Second",
            "size": Array [
              "medium",
              "medium",
            ],
            "subColumns": Array [],
            "tooltip": undefined,
          },
          Object {
            "align": Array [],
            "headerAlign": "left",
            "isSortable": false,
            "key": "d|e|f",
            "keys": Array [],
            "label": "Multi col",
            "size": Array [],
            "subColumns": Array [
              Object {
                "align": Array [
                  "left",
                ],
                "headerAlign": "left",
                "isSortable": false,
                "key": "d",
                "keys": Array [
                  "d",
                ],
                "label": "Foo",
                "size": Array [
                  "medium",
                ],
                "subColumns": Array [],
                "tooltip": undefined,
              },
              Object {
                "align": Array [
                  "left",
                  "left",
                ],
                "headerAlign": "left",
                "isSortable": false,
                "key": "e|f",
                "keys": Array [
                  "e",
                  "f",
                ],
                "label": "Bar",
                "size": Array [
                  "medium",
                  "medium",
                ],
                "subColumns": Array [],
                "tooltip": undefined,
              },
            ],
            "tooltip": undefined,
          },
        ]
      }
      onSort={[Function]}
      sortedBy={
        Object {
          "dir": "asc",
          "key": "a",
        }
      }
    />
    <Table__TableBody>
      <AATableRow
        formatters={Object {}}
        item={
          Object {
            "a": "1a",
            "b": "2b",
            "c": "3c",
            "d": "4d",
            "e": "5e",
            "f": "6f",
          }
        }
        keyGroups={
          Array [
            Array [
              "a",
            ],
            Array [
              "b",
              "c",
            ],
            Array [
              "d",
            ],
            Array [
              "e",
              "f",
            ],
            Array [],
          ]
        }
      />
      <AATableRow
        formatters={Object {}}
        item={
          Object {
            "a": "1a",
            "b": "2b",
            "c": "3c",
            "d": "4d",
            "e": "5e",
            "f": "6f",
          }
        }
        keyGroups={
          Array [
            Array [
              "a",
            ],
            Array [
              "b",
              "c",
            ],
            Array [
              "d",
            ],
            Array [
              "e",
              "f",
            ],
            Array [],
          ]
        }
      />
    </Table__TableBody>
    <TableSizeGuide
      columns={
        Array [
          Object {
            "align": Array [
              "left",
            ],
            "headerAlign": "left",
            "isSortable": false,
            "key": "a",
            "keys": Array [
              "a",
            ],
            "label": "First",
            "size": Array [
              "medium",
            ],
            "subColumns": Array [],
            "tooltip": undefined,
          },
          Object {
            "align": Array [
              "left",
              "left",
            ],
            "headerAlign": "left",
            "isSortable": false,
            "key": "b|c",
            "keys": Array [
              "b",
              "c",
            ],
            "label": "Second",
            "size": Array [
              "medium",
              "medium",
            ],
            "subColumns": Array [],
            "tooltip": undefined,
          },
          Object {
            "align": Array [],
            "headerAlign": "left",
            "isSortable": false,
            "key": "d|e|f",
            "keys": Array [],
            "label": "Multi col",
            "size": Array [],
            "subColumns": Array [
              Object {
                "align": Array [
                  "left",
                ],
                "headerAlign": "left",
                "isSortable": false,
                "key": "d",
                "keys": Array [
                  "d",
                ],
                "label": "Foo",
                "size": Array [
                  "medium",
                ],
                "subColumns": Array [],
                "tooltip": undefined,
              },
              Object {
                "align": Array [
                  "left",
                  "left",
                ],
                "headerAlign": "left",
                "isSortable": false,
                "key": "e|f",
                "keys": Array [
                  "e",
                  "f",
                ],
                "label": "Bar",
                "size": Array [
                  "medium",
                  "medium",
                ],
                "subColumns": Array [],
                "tooltip": undefined,
              },
            ],
            "tooltip": undefined,
          },
        ]
      }
    />
  </Table__StyledTable>
</Table__TableScroll>
`;

exports[`<Table /> render the styled table element 1`] = `
<table
  className="Table__StyledTable-d861wc-0 ewdWPX"
/>
`;

exports[`<Table /> renders fixed layout over the base table size matrix 1`] = `
<Table__TableWrapper
  className="TableWrapper"
>
  <BaseTable
    columns={
      Array [
        Object {
          "key": "a",
          "label": "First",
        },
        Object {
          "keys": Array [
            "b",
            "c",
          ],
          "label": "Second",
        },
        Object {
          "label": "Multi col",
          "subColumns": Array [
            Object {
              "key": "d",
              "label": "Foo",
            },
            Object {
              "keys": Array [
                "e",
                "f",
              ],
              "label": "Bar",
            },
          ],
        },
      ]
    }
    innerRef={[Function]}
    items={
      Array [
        Object {
          "a": "1a",
          "b": "2b",
          "c": "3c",
          "d": "4d",
          "e": "5e",
          "f": "6f",
        },
        Object {
          "a": "1a",
          "b": "2b",
          "c": "3c",
          "d": "4d",
          "e": "5e",
          "f": "6f",
        },
      ]
    }
    onResize={[Function]}
    onScroll={[Function]}
  />
</Table__TableWrapper>
`;
